vault backup: 2023-11-13